feat(warehouse): add GetWarehouseByName and GetWarehouseById
